# yeonjeonng_blog_analyzer_prototype

./: .gitignore  Dockerfile  README.md  TODO.md  blog_seo_analyzer_requirements.md  docker-compose.yml  env.example  pyproject.toml
.cursor/rules/: blog_seo.mdc  mdc.mdc
backend/: __init__.py
backend/crawling_service/: crawler.py
backend/seo_service/: analyzer.py
backend/shared/: config.py  models.py
monitoring/: prometheus.yml
scripts/: init-db.sql
site/: index.html
